# SHAR-Linux

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile.aarch64  README.md
android/: .gitignore  build.gradle
android/app/: build.gradle
android/app/jni/: CMakeLists.txt
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-debug/code/: Makefile  cmake_install.cmake
build-debug/libs/: Makefile  cmake_install.cmake
build-debug/libs/choreo/: Makefile  cmake_install.cmake
build-debug/libs/poser/: Makefile  cmake_install.cmake
build-debug/libs/pure3d/: Makefile  cmake_install.cmake
build-debug/libs/radcontent/: Makefile  cmake_install.cmake
build-debug/libs/radcore/: Makefile  cmake_install.cmake
build-debug/libs/radmath/: Makefile  cmake_install.cmake
build-debug/libs/radmovie/: Makefile  cmake_install.cmake
build-debug/libs/radmusic/: Makefile  cmake_install.cmake
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
build-linux/code/: Makefile  cmake_install.cmake
build-linux/libs/: Makefile  cmake_install.cmake
code/: CMakeLists.txt
code/ai/: actionbuttonhandler.cpp  actionnames.h  state.cpp
code/camera/: debugcam.cpp  followcam.cpp  pccam.cpp  supercam.h  supercamcentral.cpp  supercamcontroller.cpp  supercamcontroller.h  walkercam.cpp
code/cheats/: cheatinputhandler.cpp  cheatinputhandler.h  cheatinputsystem.cpp  cheatinputsystem.h
code/contexts/: bootupcontext.cpp  bootupcontext.h
code/data/: gamedata.h
code/debug/: profiler.cpp
code/input/: GamepadSDL.cpp  GamepadSDL.h  KeyboardSDL.cpp  KeyboardSDL.h  RealController.cpp  forceeffect.cpp  inputmanager.cpp  inputmanager.h  usercontroller.h  usercontrollerLinux.cpp  usercontrollerLinux.h  virtualinputs.cpp
code/loading/: locatorloader.cpp  roadloader.cpp
code/main/: platform_config.h  singletons.cpp  win32main.cpp  win32platform.cpp  win32platform.h
code/memory/: createheap.cpp  srrmemory.cpp  srrmemory.h
code/mission/: animatedicon.cpp  missionscriptloader.cpp
code/presentation/: tutorialmanager.cpp
code/sound/: soundmanager.cpp  soundmanager.h
code/supersprint/: supersprintmanager.cpp
code/worldsim/: avatar.cpp
libs/: CMakeLists.txt
libs/choreo/: CMakeLists.txt
libs/poser/: CMakeLists.txt
libs/pure3d/: CMakeLists.txt
libs/radcontent/: CMakeLists.txt
libs/radcore/: CMakeLists.txt
libs/radmath/: CMakeLists.txt
libs/radmovie/: CMakeLists.txt
libs/radmusic/: CMakeLists.txt
libs/radscript/: CMakeLists.txt
libs/radsound/: CMakeLists.txt
libs/scrooby/: CMakeLists.txt
libs/sim/: CMakeLists.txt
(+143 files in other folders)
